--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 show_downloads: true
 title: Website Theme Collection
+preview_path: https://www.gem-editor.com/gwc/theme
