--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 show_downloads: true
 title: Website Theme Collection
 preview_path: https://www.gem-editor.com/gwc/theme
