--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,10 @@ website_theme:
     desc: Vertical Button 3
     cssf: Bootstrap 4
     pwfn: 501
+  - name: 1b4g
+    desc: Vertical Button, gradient theme
+    cssf: Bootstrap 4
+    pwfn: 512
   - name: 2
     desc: Navigation Bar
     cssf: Bootstrap 3
