--- a/_config.yml
+++ b/_config.yml
@@ -272,6 +272,10 @@ website_theme:
     desc: Sidebar, w3schools
     cssf: W3.CSS
     pwfn: 510
+  - name: w8
+    desc: Navigation Bar
+    cssf: W3.CSS
+    pwfn: 509
   - name: w6
     desc: Architect
     cssf: W3.CSS
