--- a/_config.yml
+++ b/_config.yml
@@ -176,6 +176,10 @@ website_theme:
     desc: Horizontal Menu
     cssf: Bootstrap 3
     pwfn: 501
+  - name: 5rb
+    desc: Rainbow
+    cssf: Bootstrap 4
+    pwfn: 501
   - name: w1
     desc: Sidebar
     cssf: W3.CSS
