--- a/_config.yml
+++ b/_config.yml
@@ -185,6 +185,10 @@ website_theme:
     desc: Sidebar
     cssf: W3.CSS
     pwfn: 509
+  - name: w1at
+    desc: Sidebar, animated theme
+    cssf: W3.CSS
+    pwfn: 509
   - name: w1rd
     desc: Sidebar, red
     cssf: W3.CSS
