--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-modernist
+theme: jekyll-theme-dinky
 show_downloads: true
 google_analytics: UA-112473078-1
 title: Website Theme Collection
